# restaurant-forecast-analytics

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  databricks.yml  dbt_project.yml  profiles.yml.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: forecast-writeup.md  toast-orders-shape.md
docs/superpowers/plans/: 2026-06-18-restaurant-forecast-foundation.md  2026-06-18-restaurant-forecast-load-marts.md  2026-06-18-restaurant-forecast-orders-extract.md  2026-06-18-restaurant-forecast-reconcile-netsales.md  2026-06-27-restaurant-forecast-sales-model.md  2026-06-29-databricks-cloud-phase1.md  2026-07-06-databricks-cloud-phase2.md
exports/: backtest_metrics.csv  forecast_vs_actuals.csv
forecast/: backtest.py  data.py  export_tableau.py  metrics.py  models.py  prophet_model.py  run_forecast.py
ingest/: config.py  discover_schema.py  extract.py  orders.py  toast_client.py
load/: databricks.py  load_forecast.py  load_to_delta.py  run_load.py
models/marts/: _models.yml  fct_daily_sales.sql  forecast_vs_actuals.sql
models/staging/: _sources.yml  stg_orders.sql
seeds/: toast_sales_summary.csv
tests/: assert_net_sales_reconciles_to_toast.sql  assert_non_negative_net_sales.sql  test_autodetect.py  test_backtest.py  test_config.py  test_export_tableau.py  test_extract.py  test_forecast_data.py  test_load_forecast.py  test_load_to_delta.py  test_metrics.py  test_models.py  test_orders.py  test_prophet_model.py  test_toast_client.py
tests/fixtures/: sample_order.json
(+2 files in other folders)
