[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "restaurant-forecast-analytics"
version = "0.1.0"
description = "Toast POS -> Databricks + dbt -> Prophet sales forecasting pipeline"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=17",
    "python-dotenv>=1.0",
    "databricks-sql-connector>=4.0",
    "prophet==1.1.6",
    "cmdstanpy==1.2.4",
    "holidays>=0.50",
]

[project.scripts]
rfa-extract = "ingest.extract:main"
rfa-load = "load.run_load:main"
rfa-forecast = "forecast.run_forecast:main"

[tool.setuptools]
packages = ["ingest", "load", "forecast"]
